[tool.poetry]
name = "test-dependencies"
version = "0.1.0"
description = ""
authors = ["Guilherme Prokisch <guilherme.prokisch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
gunicorn = "21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
